      (Alexander Belchenko)

    * ``launchpad`` builtin plugin now shipped as separate part in standalone
      bzr.exe, installed to ``C:\Program Files\Bazaar\plugins`` directory, 
      and standalone installer allows user to skip installation of this plugin.
      (Alexander Belchenko)
 
    * Restore auto-detection of plink.exe on Windows. (Dmitry Vasiliev)

  FEATURES:

   * ``branch`` and ``checkout`` can hard-link working tree files, which is
     faster and saves space.  (Aaron Bentley)

  IMPROVEMENTS:

  BUGFIXES:

    * Disable plink's interactive prompt for password.
      (#107593, Dmitry Vasiliev)

    * Include quick-start-summary.svg file to python-based installer(s)
      for Windows. (#192924, Alexander Belchenko)

    * ``merge --preview`` now works for merges that add or modify
      symlinks (James Henstridge)

  API BREAKS:

    * Support for loading plugins from zip files and
      ``bzrlib.plugin.load_from_zip()`` function are deprecated.
      (Alexander Belchenko)

  TESTING:

    * ``bzrlib.tests.adapt_tests`` was broken and unused - it has been fixed.
      (Robert Collins)

    * Fix the test HTTPServer to be isolated from chdir calls made while it is
      running, allowing it to be used in blackbox tests. (Robert Collins)

    * The branch interface tests were invalid for branches using subtree
      repositories by default. This has been fixed. (Robert Collins)

  INTERNALS:

    * New module ``tools/package_mf.py`` provide custom module finder for
      python packages (improves standard python library's modulefinder.py)
      used by ``setup.py`` script while building standalone bzr.exe.
      (Alexander Belchenko)

    * New remote method ``RemoteBzrDir.find_repositoryV2`` adding support for
      detecting external lookup support on remote repositories. This method is
      now attempted first when lookup up repositories, leading to an extra 
      round trip on older bzr smart servers. (Robert Collins)
 