@@ -890,7 +890,7 @@ class BzrDir(object):
 
     def sprout(self, url, revision_id=None, force_new_repo=False,
                recurse='down', possible_transports=None,
-               accelerator_tree=None, hardlink=False):
+               accelerator_tree=None, hardlink=False, shallow=False):
         """Create a copy of this bzrdir prepared for use as a new line of
         development.
 
@@ -914,15 +914,18 @@ class BzrDir(object):
         target_transport.ensure_base()
         cloning_format = self.cloning_metadir()
         result = cloning_format.initialize_on_transport(target_transport)
-        shallow_branch_url = False
         try:
             source_branch = self.open_branch()
             source_repository = source_branch.repository
-            try:
-                shallow_branch_url = source_branch.get_stacked_on()
-            except (errors.NotStacked, errors.UnstackableBranchFormat,
-                errors.UnstackableRepositoryFormat):
+            if shallow:
+                shallow_branch_url = self.root_transport.base
+            else:
                 shallow_branch_url = None
+                try:
+                    shallow_branch_url = source_branch.get_stacked_on()
+                except (errors.NotStacked, errors.UnstackableBranchFormat,
+                    errors.UnstackableRepositoryFormat):
+                    shallow_branch_url = None
         except errors.NotBranchError:
             source_branch = None
             try:
@@ -941,9 +944,10 @@ class BzrDir(object):
         elif source_repository is None and result_repo is None:
             # no repo available, make a new one
             result.create_repository()
-        elif result_repo is None and shallow_branch_url:
-            result_repo = source_repository._format.initialize(result)
-            stacked_dir = BzrDirPreSplitOut.open(shallow_branch_url)
+        elif shallow_branch_url:
+            if result_repo is None:
+                result_repo = source_repository._format.initialize(result)
+            stacked_dir = BzrDir.open(shallow_branch_url)
             try:
                 stacked_repo = stacked_dir.open_branch().repository
             except errors.NotBranchError:
@@ -963,9 +967,11 @@ class BzrDir(object):
                 # so we can override the copy method
                 result_repo.fetch(source_repository, revision_id=revision_id)
         if source_branch is not None:
-            source_branch.sprout(result, revision_id=revision_id)
+            result_branch = source_branch.sprout(result, revision_id=revision_id)
         else:
-            result.create_branch()
+            result_branch = result.create_branch()
+        if shallow_branch_url:
+            result_branch.set_stacked_on(shallow_branch_url)
         if isinstance(target_transport, LocalTransport) and (
             result_repo is None or result_repo.make_working_trees()):
             wt = result.create_workingtree(accelerator_tree=accelerator_tree,
