@@ -31,6 +31,9 @@ IN DEVELOPMENT
  
     * Restore auto-detection of plink.exe on Windows. (Dmitry Vasiliev)
 
+    * Shallow branches are now supported. See ``bzr help branch`` and 
+      ``bzr help push``. (Robert Collins)
+
   FEATURES:
 
    * ``branch`` and ``checkout`` can hard-link working tree files, which is
